// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with image 1`] = `
<div
  className="Image-Container"
>
  <img
    alt="Sorry"
    className="Image"
    src="cateyes.jpg"
  />
</div>
`;

exports[`renders without props 1`] = `
<div
  className="Image-Container"
>
  <img
    alt="Sorry"
    className="Image"
  />
</div>
`;
